# CV_GL_IP

./: .gitignore  CMakeCache.txt  CMakeLists.txt  OpenCV_Tuto_with_GL.code-workspace  README.MD  cmake_install.cmake  imgui.ini  makefile  notes.md
glad/: CMakeLists.txt  Makefile  cmake_install.cmake
glad/include/glad/: glad.h
imgui/: CMakeLists.txt  Makefile  cmake_install.cmake
include/glad/include/glad/: glad.h
include/glad/src/: glad.c
include/imgui/: imgui.cpp  imgui.h  imgui_demo.cpp  imgui_draw.cpp  imgui_impl_glfw.cpp  imgui_impl_glfw.h  imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_internal.h  imgui_tables.cpp  imgui_widgets.cpp
res/shaders/: Basic.shader
src/: camera.cpp  camera.h  custom_filtering.cpp  custom_filtering.h  cv_image.cpp  cv_image.h  filtering.cpp  filtering.h  glad.c  index_buffer.cpp  index_buffer.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h  texture_cv.cpp  texture_cv.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h  vertex_buffer_layout.h
src/GUI/: IP_UI.cpp  IP_UI.h  edit_gui.cpp  edit_gui.h  render_UI.cpp  render_UI.h  tests_menu.cpp  tests_menu.h
src/core/: base.h
src/renderer/: OpenGL_framebuffer.cpp  OpenGL_framebuffer.h  framebuffer.cpp  framebuffer.h
src/tests/: test.cpp  test.h  test_3D.cpp  test_3D.h  test_clear_color.cpp  test_clear_color.h  test_cv_image.cpp  test_cv_image.h  test_texture_2D.cpp  test_texture_2D.h
